Ensure help bubbles are visible
Former-commit-id: 2ae9647724fb7b30b870ca6c6c9f0f1d5b62aa55

--- a/src/main/webapp/Fave100.css
+++ b/src/main/webapp/Fave100.css
@@ -142,7 +142,6 @@ footer {
 
 .content {
 	position: relative;
-	overflow-y: hidden;
 }
 
 .inputStatusMessage {
